Correct contrast color for li

--- a/app.css
+++ b/app.css
@@ -236,6 +236,7 @@ p {
 
 .skill2 {
   background: #e2505c;
+  background-color: hsl(354, 54%, 53%)
 }
 
 .skill3 {
